# OpenCLSobel

./: CMakeLists.txt  ErrorCodes.cpp  ErrorCodes.h  README  SobelOZ.cl  SobelOZ.cpp
